--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,19 @@
-@font-face {
+@font-face{
     font-family: 'mojangregular';
-    src: url('fonts/mojang-regular-webfont.woff') format('woff2'),
-         url('fonts/mojang-regular-webfont.woff2') format('woff');
+    src: url('/fonts/mojang-regular-webfont.woff') format('woff2'),
+         url('/fonts/mojang-regular-webfont.woff2') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 body{
-    background: url(images/background_3.png) no-repeat center center fixed;
+    background: url(/images/background_3.png) no-repeat center center fixed;
     background-size: cover;
     font-family: "mojangregular";
     color: white;
 }
 
-body::before {
+body::before{
   content: "";
   position: fixed;
   top: 0; left: 0;
@@ -29,7 +29,7 @@ nav{
     margin-top: 30px
 }
 
-nav ul {
+nav ul{
     display: flex;
     flex-wrap: wrap;
     list-style: none;
@@ -51,12 +51,12 @@ a{
     transition: transform 0.3s ease, color 0.3s ease;
 }
 
-a:hover {
+a:hover{
     transform: translateY(-5px); 
     color: #2ecc71;
 }
 
-#selected a {
+#selected a{
     color: #1db954;
     text-shadow: 0 0 16px #1db954;
 }
@@ -64,15 +64,6 @@ a:hover {
 #logo{
     height: 54px;
     margin-left: 40px;
-}
-
-body iframe{
-    width: 90%;
-    height: calc(90vh - 80px); 
-    display: block;
-    border: none;
-    border-radius: 18px;
-    margin: 0 auto;
 }
 
 main{
@@ -83,71 +74,12 @@ main{
 }
 
 #nadpis{
-    
     font-size: 80px;
-
 }
 
-#box-news{
-    width: 90%;
-    height: calc(90vh - 80px); 
-    display: flex;
-    border: none;
-    border-radius: 18px;
-    margin: 0 auto;
-    flex-wrap: wrap;
-}
-
-#news {
-    backdrop-filter: blur(8px);
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 18px;
-    width: calc(33.33% - 2%); 
-    min-width: 400px;
-    word-wrap: break-word; 
-    overflow-wrap: break-word;
-    margin: 1%;
-    box-sizing: border-box;
-    padding: 15px;
-    text-shadow: 1px 1px 6px rgba(0,0,0,0.7);
-}
-
-#news h1{
-    text-align: center;
-    color: #1db954;
-}
-
-#news img{
-    height: auto;
-    margin: 5px auto;
-    max-width: 100%;
-    border-radius: 18px;
-}
-
-#text{
-    text-align: left;
-    line-height: 1.3em;
-}
-
-.btn {
-    display: block;       /* nutné pro margin auto */
-    margin: 0 auto;   
-    background: #1db954;
-    text-align: center;
-    justify-content: center;
-    color: #000;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 8px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-}
 .btn:hover {
   background: #00cc70;
 }
-
-
 
 .hero {
     display: flex;
@@ -162,7 +94,6 @@ main{
     font-size: 80px;
     text-shadow: 0 0 20px rgba(0,0,0,0.8);
     margin: 0px;
-
 }
 
 .hero p {
@@ -203,35 +134,7 @@ main{
     text-shadow: 0 0 10px #2ecc71;
 }
 
-.modal {
-  display: none; 
-  position: fixed;
-  z-index: 1000;
-  left: 0; top: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.7);
-}
 
-.modal-content {
-  backdrop-filter: blur(8px);
-  background: rgba(255, 255, 255, 0.2);
-  margin: 0 auto;
-  height: calc(90vh - 80px); 
-  padding: 20px;
-  border-radius: 18px;
-  width: 90%;
-  border: none;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
-
-}
-
-
-
-.close {
-  float: right;
-  font-size: 28px;
-  cursor: pointer;
-}
 
 
 
