--- a/styles/joinus.css
+++ b/styles/joinus.css
@@ -100,3 +100,8 @@ a:hover {
     text-shadow: 0 0 20px rgba(0,0,0,0.8);
     margin: 0px;
 }
+
+#text{
+    text-align: left;
+    line-height: 1.6em;
+}
