--- a/styles/dynmap.css
+++ b/styles/dynmap.css
@@ -74,3 +74,31 @@ body iframe{
     border-radius: 18px;
     margin: 0 auto;
 }
+
+@media (max-width: 768px) {
+
+    nav {
+        flex-direction: column;
+        align-items: center;
+        margin: 20px 0;
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 20px;
+        margin: 90;
+        gap: 10px;
+    }
+
+    nav ul li {
+        font-size: 18px;
+        text-align: center;
+    }
+
+    #logo {
+        margin: 0 0 15px 0;
+        height: 80px;
+    }
+   
+}
+
