--- a/styles/joinus.css
+++ b/styles/joinus.css
@@ -105,3 +105,55 @@ a:hover {
     text-align: left;
     line-height: 1.6em;
 }
+
+/* Responzivita pro telefony */
+
+
+@media (max-width: 768px) {
+
+    nav {
+        flex-direction: column;
+        align-items: center;
+        margin: 20px 0;
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 20px;
+        margin: 90;
+        gap: 10px;
+    }
+
+    nav ul li {
+        font-size: 18px;
+        text-align: center;
+    }
+
+    #logo {
+        margin: 0 0 15px 0;
+        height: 80px;
+    }
+
+    .hero {
+        height: auto;
+        padding: 60px 20px;
+    }
+
+    .hero h1 {
+        font-size: 60px;
+    }
+
+    #text {
+        font-size: 16px;
+        line-height: 1.4em;
+        padding: 0 15px;
+    }
+
+    .server-status {
+        flex-direction: column;
+        gap: 15px;
+        font-size: 18px;
+        padding: 15px 20px;
+    }
+}
+
