--- a/styles/style.css
+++ b/styles/style.css
@@ -134,6 +134,33 @@ main{
     text-shadow: 0 0 10px #2ecc71;
 }
 
+@media (max-width: 768px) {
+
+    nav {
+        flex-direction: column;
+        align-items: center;
+        margin: 20px 0;
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 20px;
+        margin: 90;
+        gap: 10px;
+    }
+
+    nav ul li {
+        font-size: 18px;
+        text-align: center;
+    }
+
+    #logo {
+        margin: 0 0 15px 0;
+        height: 80px;
+    }
+   
+}
+
 
 
 
