--- a/styles/rules.css
+++ b/styles/rules.css
@@ -66,3 +66,30 @@ a:hover {
     margin-left: 40px;
 }
 
+@media (max-width: 768px) {
+
+    nav {
+        flex-direction: column;
+        align-items: center;
+        margin: 20px 0;
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 20px;
+        margin: 90;
+        gap: 10px;
+    }
+
+    nav ul li {
+        font-size: 18px;
+        text-align: center;
+    }
+
+    #logo {
+        margin: 0 0 15px 0;
+        height: 80px;
+    }
+   
+}
+
