--- a/styles/style.css
+++ b/styles/style.css
@@ -158,6 +158,17 @@ main{
         margin: 0 0 15px 0;
         height: 80px;
     }
+
+    .hero h1 {
+        font-size: 60px;
+    }
+
+    .server-status {
+        display: flex;
+        flex-direction: column; 
+        gap: 8px;
+}
+
    
 }
 
