--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @font-face{
     font-family: 'mojangregular';
-    src: url('fonts/mojang-regular-webfont.woff') format('woff2'),
-         url('fonts/mojang-regular-webfont.woff2') format('woff');
+    src: url('../fonts/mojang-regular-webfont.woff') format('woff2'),
+         url('../fonts/mojang-regular-webfont.woff2') format('woff');
     font-weight: normal;
     font-style: normal;
 }
