--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background: url(images/background_3.png) no-repeat center center fixed;
+    background: url(../images/background_3.png) no-repeat center center fixed;
     background-size: cover;
     font-family: "mojangregular";
     color: white;
