--- a/styles/news.css
+++ b/styles/news.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'mojangregular';
-    src: url('/..fonts/mojang-regular-webfont.woff') format('woff2'),
+    src: url('..fonts/mojang-regular-webfont.woff') format('woff2'),
          url('../fonts/mojang-regular-webfont.woff2') format('woff');
     font-weight: normal;
     font-style: normal;
